--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
     "version": "1.0.0",
     "description": "Hello world for now",
     "manifest_version": 3,
-    "author": "Johann Faust VII",
+    "author": "Johann Faust VIII",
     "action":{
         "default_popup": "index.html",
         "default_title": "Hello World"
     },
     "content_scripts": [
         {
-          "js": ["scripts/link-filter.js"],
+          "js": ["scripts/filtering/link-filter.js"],
           "matches": [
             "https://www.linkedin.com/jobs/search*",
             "https://linkedin.com/jobs/search*"
