--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,18 @@
 {
     "name": "Eye plugin",
     "version": "1.0.0",
-    "description": "Hello world for now",
+    "description": "Filter offers on LinkedIn",
     "manifest_version": 3,
     "author": "Johann Faust VIII",
     "action":{
         "default_popup": "index.html",
         "default_title": "Hello World"
+    },
+    "icons": {
+      "16": "icons/eye16.png",
+      "32": "icons/eye32.png",
+      "48": "icons/eye48.png",
+      "128": "icons/eye128.png"
     },
     "content_scripts": [
         {
